# rust-lambda-workshop

./: .gitignore  Cargo.toml  README.md  samconfig.toml  template.yml
src/: main.rs
