[package]
name = "itsalive"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.1.8"
aws-sdk-dynamodb = "1.18.0"
aws_lambda_events = { version = "0.15.0", default-features = false, features = [
  "eventbridge",
] }
chrono = "0.4.35"

lambda_runtime = "0.10.0"
reqwest = { version = "0.11.26", default-features = false, features = [
  "rustls-tls",
] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["macros"] }
